          MFString element.  This behavior is consistent with that of
          the String object constructor.

        * src/openvrml/OpenVRML/script.cpp:  Treat SFInt32 values and
          MFInt32 elements in JavaScript as JavaScript numerics (double
          precision) rather than JavaScript integers.  ECMAScript
          doesn't have distinct integer and floating point types.

2002-12-10  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp:  MSVC6 doesn't like in-class
          initialization of static const integers.  Use enum instead.

        * README, configure.ac, openvrml.pc.in,
          src/openvrml/OpenVRML/Makefile.am,
          src/openvrml/OpenVRML/Viewer.h,
          src/openvrml/OpenVRML/font.cpp, src/openvrml/OpenVRML/font.h
          src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h,
          src/openvrml-gl/OpenVRML/GL/Makefile.am,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h:  Use fontconfig
          for font discovery.  Refactored glyph data->polygon conversion
          to Text node implementation.

        * openvrml.spec.in:  Added BuildRequires for pkgconfig,
          fontconfig-devel, freetype-devel.  Added Requires for
          fontconfig, freetype.  Updated configure arguments.

        * src/openvrml/OpenVRML/script.h:  Removed obsolete declaration
          of Doc class.

        * configure.ac, openvrml.spec.in, doc/Doxyfile, doc/Doxyfile.in,
          doc/Makefile.am:  Removed generation of API docs during
          install.  API doc generation must now be done manually, and
          the generated docs get included in the distribution.  This
          simplifies things for RPM--and probably users in general--so
          the API docs now get included in the RPM package.

        * src/openvrml/OpenVRML/field.cpp:  Assert that indices must be